--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   font-family:cursive;
   font-size:larger;
   font-weight:400;
-  text-align:centre;
+  text-align:center;
 }
 .image{
   padding:40px;
